--- a/Lab.Capas.Presentacionn/Lab.Demo.ResourceAccess/Lab.Demo.ResourceAccess.csproj
+++ b/Lab.Capas.Presentacionn/Lab.Demo.ResourceAccess/Lab.Demo.ResourceAccess.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="NorthwindContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CategoriesRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -66,5 +67,6 @@
       <Name>Lab.Demo.Entities</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
